使用unint64无服务的类型定制一些字段
