# adminApi/docs/swagger.json
@@ -184,6 +184,57 @@
                 }
             }
         },
+        "/user_mana/create": {
+            "post": {
+                "security": [
+                    {
+                        "MustToken": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user_mana   用户管理模块"
+                ],
+                "summary": "创建admin用户",
+                "parameters": [
+                    {
+                        "description": "用户资料",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/handler.adminUserReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{code:0,msg:ok}",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseModel"
+                        }
+                    },
+                    "400": {
+                        "description": "{code:1,msg:无效的请求参数}",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseModel"
+                        }
+                    },
+                    "500": {
+                        "description": "{code:-1,msg:服务器故障}",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseModel"
+                        }
+                    }
+                }
+            }
+        },
         "/user_mana/delete": {
             "post": {
                 "security": [
@@ -215,9 +266,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "用户详情",
+                        "description": "{code:0,msg:ok}",
                         "schema": {
-                            "$ref": "#/definitions/model.AdminUser"
+                            "$ref": "#/definitions/handler.ResponseModel"
                         }
                     },
                     "400": {
@@ -376,21 +427,28 @@
                 "summary": "更新admin用户",
                 "parameters": [
                     {
-                        "description": "id 列表",
+                        "type": "string",
+                        "description": "用户uid",
+                        "name": "uid",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "description": "用户资料",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/handler.ids"
+                            "$ref": "#/definitions/handler.adminUserReq"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "用户详情",
+                        "description": "{code:0,msg:ok}",
                         "schema": {
-                            "$ref": "#/definitions/model.AdminUser"
+                            "$ref": "#/definitions/handler.ResponseModel"
                         }
                     },
                     "400": {
@@ -420,6 +478,35 @@
                     "type": "object"
                 },
                 "msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.adminUserReq": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "description": "邮箱",
+                    "type": "string"
+                },
+                "password": {
+                    "description": "密码",
+                    "type": "string"
+                },
+                "phone": {
+                    "description": "手机号",
+                    "type": "string"
+                },
+                "real_name": {
+                    "description": "真实姓名",
+                    "type": "string"
+                },
+                "status": {
+                    "description": "状态(1:启用  2.禁用)",
+                    "type": "integer"
+                },
+                "username": {
+                    "description": "用户名",
                     "type": "string"
                 }
             }
@@ -492,7 +579,7 @@
                     "description": "状态(1:启用  2.禁用)",
                     "type": "integer"
                 },
-                "user_name": {
+                "username": {
                     "description": "用户名",
                     "type": "string"
                 }
